--- a/public/css/estilosGenerales.less
+++ b/public/css/estilosGenerales.less
@@ -1,3 +1,7 @@
+* {
+  outline: none;
+}
+
 html{
   min-height: 100%;
   position: relative;
@@ -551,4 +555,12 @@ body {
   color: rgb(126, 126, 126);
   pointer-events: none;
   cursor: not-allowed;
+}
+
+// .grecaptcha-badge {
+//   display: none;
+// }
+
+body .filtroVehiculos select[disabled] {
+  color: rgb(180, 180, 180);
 }
