--- a/assets/css/navbar.scss
+++ b/assets/css/navbar.scss
@@ -18,7 +18,7 @@
         }
     }
     
-    .navbar-nav{
+    // .navbar-nav{
         
 //        .active{
 //            a{
@@ -55,4 +55,4 @@
 //    .navbar-right{
 //        font-weight: normal;
 //    }
-}
+// }
