--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,102 +4,36 @@
     <meta charset="UTF-8"/>
     <title>{% block title %}Bienvenido - Despiece{% endblock %}</title>
     <link rel="icon" type="image/x-icon" href="{{ asset('img/logoAplicacion.png') }}"/>
-    {{ encore_entry_link_tags('bootstrap') }}
-    {# <link rel="stylesheet" href="{{ asset('vendor/bootstrap/css/bootstrap.min.css') }}"/> #}
 
-    <link rel="stylesheet" href="{{ asset('vendor/font-awesome/css/font-awesome.min.css') }}"/>
-
-    <link rel="stylesheet" href="{{ asset('vendor/jquery/css/jquery.css') }}"/>
-
-    <link rel="stylesheet" href="{{ asset('vendor/offcanvas.css') }}"/>
-
-    <link rel="stylesheet" href="{{ asset('vendor/alertify/css/alertify.core.css') }}"/>
-    <link rel="stylesheet" href="{{ asset('vendor/alertify/css/alertify.bootstrap.css') }}"/>
-
-    <link rel="stylesheet" href="{{ asset('css/navbar.css') }}"/>
-    <link rel="stylesheet" href="{{ asset('vendor/flags/flags.css') }}"/>
-    <link rel="stylesheet/less" href="{{ asset('css/estilosGenerales.less') }}"/>
+    {{ encore_entry_link_tags('css/bootstrap') }}
+    {{ encore_entry_link_tags('css/font-awesome') }}
+    {{ encore_entry_link_tags('css/jquery') }}
+    {{ encore_entry_link_tags('css/offcanvas') }}
+    {{ encore_entry_link_tags('css/alertify-core') }}
+    {{ encore_entry_link_tags('css/alertify-bootstrap') }}
+    {{ encore_entry_link_tags('css/flags') }}
+    {{ encore_entry_link_tags('css/navbar') }}
+    {{ encore_entry_link_tags('css/estilos-generales') }}
 
     {% block stylesheets %}{% endblock %}
 </head>
 <body>
 
-{% include 'inc/navbar.html.twig' %}
+    {% include 'inc/navbar.html.twig' %}
 
-{% block body %}{% endblock %}
+    {% block body %}{% endblock %}
 
+    {% include 'inc/footer.html.twig' %}
 
-{% include 'inc/footer.html.twig' %}
+    {# this jquery version is mandatory, others dont work !! #}
+    <script src="{{ asset('/jquery/js/jquery.js') }}"></script>
 
-<!-- Matomo -->
-<script type="text/javascript">
-  var _paq = window._paq || [];
-  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
-  _paq.push(['trackPageView']);
-  _paq.push(['enableLinkTracking']);
-  (function() {
-    var u="//analisisweb.cubahosting.net/";
-    _paq.push(['setTrackerUrl', u+'matomo.php']);
-    _paq.push(['setSiteId', '2']);
-    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
-  })();
-</script>
-<!-- End Matomo Code -->
+    {{ encore_entry_script_tags('js/bootstrap') }}
+    {{ encore_entry_script_tags('js/alertify') }}
+    {{ encore_entry_script_tags('js/pantallaCargando') }}
+    {{ encore_entry_script_tags('js/validaciones') }}
+    {{ encore_entry_script_tags('js/scriptsGenerales') }}
 
-<script src="{{ asset('vendor/jquery/js/jquery.js') }}"></script>
-
-
-<script src="{{ asset('vendor/bootstrap/js/bootstrap.min.js') }}"></script>
-<script src="{{ asset('vendor/bootstrap/js/less.min.js') }}"></script>
-
-<script src="{{ asset('vendor/alertify/js/alertify.min.js') }}"></script>
-
-<script src="{{ asset('js/pantallaCargando.js') }}"></script>
-<script src="{{ asset('js/validaciones.js') }}"></script>
-<script>
-
-    var correo = '';
-
-    $(function () {
-
-        $('a.contacto').click(function () {
-            correo = $(this).text();
-            $('#nombre_contacto').focus();
-        });
-
-        $('#btn-enviar-contacto').click(function () {
-            if (estaVacio($('#nombre_contacto').val()) || estaVacio($('#titulo_contacto').val()) || estaVacio($('#mensaje_contacto').val())) {
-                alertify.error('{{ 'introduzca.datos.formulario' | trans }}');
-                return false;
-            }
-
-            if (esSoloEspacios($('#nombre_contacto').val()) || esSoloEspacios($('#titulo_contacto').val()) || esSoloEspacios($('#mensaje_contacto').val())) {
-                alertify.error('{{ 'introduzca.datos.formulario' | trans }}');
-                return false;
-            }
-
-            $('#para_contacto').val(correo);
-
-            $.ajax({
-                url: $('#form-contacto').attr('action'),
-                data: $('#form-contacto').serialize(),
-                method: 'post'
-            }).success(function (data) {
-                $('#modal_contacto').modal('hide');
-                alertify.success('{{ 'mensaje.enviado' | trans }}');
-            }).error(function (err) {
-                console.log("Error", err);
-                alertify.error('{{ 'mensaje.no.enviado' | trans }}');
-            });
-        });
-
-        removeDisabledFromButton = function(id) {
-            $("[disabled]").removeAttr('disabled');
-        };
-
-    });
-</script>
-{% block javascripts %}{% endblock %}
+    {% block javascripts %}{% endblock %}
 </body>
 </html>
