--- a/templates/inc/carousel.html.twig
+++ b/templates/inc/carousel.html.twig
@@ -1,5 +1,6 @@
 <div id="carousel-example-generic" class="carousel slide">
-    <!-- Indicators -->
+
+    <!-- Controles inferiores del carousel -->
     <ol class="carousel-indicators">
         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
@@ -7,41 +8,23 @@
         <li data-target="#carousel-example-generic" data-slide-to="3"></li>
     </ol>
 
-    <!-- Wrapper for slides -->
+    <!-- imagenes del carousel -->
     <div class="carousel-inner">
         <div class="item active">
             <img src="{{ asset('img/carousel/Banner-Opt.png') }}" alt="Banner-Opt">
-
-            {#<div class="carousel-caption">#}
-                {#<h3>Img 1</h3>#}
-
-                {#<p>Aqui podemos observar sjkdf sdjfh sjkd fjksdfh ksdh ksdhf kjsdhf kjsdhf kjdshf jksdh fksd hf</p>#}
-            {#</div>#}
         </div>
         <div class="item">
             <img src="{{ asset('img/carousel/Banner-Opt.png') }}" alt="Banner-Opt">
-
-            {#<div class="carousel-caption">#}
-                {#...#}
-            {#</div>#}
         </div>
         <div class="item">
             <img src="{{ asset('img/carousel/Banner-Opt.png') }}" alt="Banner-Opt">
-
-            {#<div class="carousel-caption">#}
-                {#...#}
-            {#</div>#}
         </div>
         <div class="item">
             <img src="{{ asset('img/carousel/Banner-Opt.png') }}" alt="Banner-Opt">
-
-            {#<div class="carousel-caption">#}
-                {#...#}
-            {#</div>#}
         </div>
     </div>
 
-    <!-- Controls -->
+    <!-- Controles laterales del carousel -->
     <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
         <span class="icon-prev"></span>
     </a>
