--- a/templates/layout/email.html.twig
+++ b/templates/layout/email.html.twig
@@ -27,7 +27,7 @@
     <tr>
         <td width="10px"></td>
         <td>
-            <span>Aplicación Infotaller <strong>Despiece</strong> {{date()|date('Y')}} </span>
+            <span>Aplicación <strong>Infotaller</strong> {{date()|date('Y')}} </span>
         </td>
         <td width="10px"></td>
     </tr>
